@@ -1,6 +1,12 @@
 BEGIN {
     return if $::curbuf;
 
+    eval <<'END' unless `vim --version` =~ /\+perl/;
+    use Test::More;
+    plan skip_all => "vim not found, or not compiled with perl support";
+    exit;
+END
+
     exec 'vim', qw/ -V -u NONE -i NONE -N -e -s /,
         '-c' => 'perl unshift @INC, "lib"', 
         '-c' => 'perl unshift @INC, "t/lib"', 
@@ -22,34 +28,4 @@ sub is_test_class {
       return $file !~ /VimTest/;
 }
 
-package Foo;
-
-$DB::single = 1;
 My::Loader->import( 't/lib' );
-#VimTest->runtests;
-
-__END__
-
-use Test::More;
-
-plan skip_all => 'soon';
-
-use Path::Tiny;
-
-my $iter = path( 't/lib/TestsFor' )->iterator({ recurse => 1 });
-
-while( my $file = $iter->() ) {
-    next unless $file =~ /\.pm$/ and 0;
-
-    run_test( $file );
-}
-
-sub run_test {
-    system 'vim', qw/ -V -u NONE -i NONE -N -e -s /,
-        '-c' => 'perl push @INC, "lib"', 
-#        '-c' => 'perl push @INC, "t/lib"', 
-        '-c', "perl do '$0' or die \$@",
-        '-c', "qall!";
-}
-
-
